statistics and count aggregated